<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email:</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="last_name">Last Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="username">Username:</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginToast">First Name: %s Last Name: %s</string>
    <string name="defaultText">Click on a marker to see event details</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="home">home</string>
    <string name="eventTitle">Life Events</string>
    <string name="familyTitle">Family</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="personGender">Gender</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="show_father_side">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="show_mother_lines">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="logout">Logout</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
</resources>