<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <TextView
        android:id="@+id/storyLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/life_story_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/life_story_lines" />

    <TextView
        android:id="@+id/showStoryLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/show_life_story_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyLines"
        tools:text="@string/show_life_story_lines" />

    <Switch
        android:id="@+id/storyLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showStoryLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showStoryLines" />

    <TextView
        android:id="@+id/familyTreeLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/family_tree_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        tools:text="@string/family_tree_lines" />

    <TextView
        android:id="@+id/showFamilyTreeLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/show_family_tree_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/familyTreeLines"
        tools:text="@string/show_family_tree_lines" />

    <Switch
        android:id="@+id/familyTreeLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showFamilyTreeLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/familyTreeLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showFamilyTreeLines" />

    <TextView
        android:id="@+id/spouseLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/spouse_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        tools:text="@string/spouse_lines" />

    <TextView
        android:id="@+id/showSpouseLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/show_spouse_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spouseLines"
        tools:text="@string/show_spouse_lines" />

    <Switch
        android:id="@+id/spouseLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showSpouseLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spouseLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showSpouseLines" />

    <TextView
        android:id="@+id/fatherLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/father_s_side"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        tools:text="@string/father_s_side" />

    <TextView
        android:id="@+id/showFatherLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/show_father_side"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatherLines"
        tools:text="@string/show_father_side" />

    <Switch
        android:id="@+id/fatherLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showFatherLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatherLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showFatherLines" />

    <TextView
        android:id="@+id/motherLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/mother_s_side"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        tools:text="@string/mother_s_side" />

    <TextView
        android:id="@+id/showMotherLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/show_mother_lines"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motherLines"
        tools:text="@string/show_mother_lines" />

    <Switch
        android:id="@+id/motherLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showMotherLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/motherLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showMotherLines" />

    <TextView
        android:id="@+id/maleLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/male_events"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line5"
        tools:text="@string/male_events" />

    <TextView
        android:id="@+id/showMaleLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/filter_gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maleLines"
        tools:text="@string/filter_gender" />

    <Switch
        android:id="@+id/maleLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showMaleLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maleLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showMaleLines" />

    <TextView
        android:id="@+id/femaleLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/female_events"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line6"
        tools:text="@string/female_events" />

    <TextView
        android:id="@+id/showFemaleLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/filter_gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/femaleLines"
        tools:text="@string/filter_gender" />

    <Switch
        android:id="@+id/femaleLinesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/showFemaleLines"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/femaleLines"
        android:layout_marginEnd="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/line7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showFemaleLines" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line7"
        tools:text="@string/logout" />

    <TextView
        android:id="@+id/showLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/return_to_login_screen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logout"
        tools:text="@string/return_to_login_screen" />

    <View
        android:id="@+id/line8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/showLogout" />

</androidx.constraintlayout.widget.ConstraintLayout>