<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PersonActivity">

    <TextView
        android:id="@+id/personFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="John" />
    <TextView
        android:id="@+id/personFirstNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personFirstName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/firstName"
        tools:text="First Name" />
    <View
        android:id="@+id/fill1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/personFirstNameDetail" />
    <TextView
        android:id="@+id/personLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fill1"
        tools:text="Doe" />
    <TextView
        android:id="@+id/personLastNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personLastName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/lastName"
        tools:text="Last Name" />
    <View
        android:id="@+id/fill2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/personLastNameDetail" />
    <TextView
        android:id="@+id/personGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fill2"
        tools:text="Male" />
    <TextView
        android:id="@+id/personGenderDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personGender"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/personGender"
        tools:text="Gender" />
    <View
        android:id="@+id/fill3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/personGenderDetail" />



    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        app:layout_constraintTop_toBottomOf="@id/fill3"
        tools:context=".activities.PersonActivity"
        tools:layout_editor_absoluteX="55dp" />

</androidx.constraintlayout.widget.ConstraintLayout>